ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todomaker-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: todomaker.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
